--- a/01/Makefile
+++ b/01/Makefile
@@ -1,6 +1,8 @@
+flags = -Wall -Werror
+
 moco : moco.o
-	 cc -o -Wall -Werror moco moco.o
- moco.o : main.c
-	 cc -c -Wall -Werror main.c -o moco.o
- clean :
-	 rm moco moco.o
+	cc -o moco moco.o
+moco.o : main.c
+	cc -c $(flags) main.c -o moco.o
+clean :
+	rm moco moco.o
